# vkc

./: .gitignore  Cargo.toml  README.md
shaders/: shader.frag  shader.vert
src/: buffer.rs  command_buffers.rs  command_pool.rs  descriptor_pool.rs  descriptor_set_layout.rs  device.rs  device_memory.rs  error.rs  framebuffer.rs  graphics_pipeline.rs  image.rs  image_view.rs  image_views.rs  instance.rs  lib.rs  loader.rs  pipeline_layout.rs  queue.rs  render_pass.rs  sampler.rs  semaphore.rs  shader_module.rs  surface.rs  swapchain.rs  util.rs  vulkan_h.rs
